# Ros2_Omni_Robot

./: LICENSE
Ros2_Omni_Robot/: CMakeLists.txt  install_dependency.sh  package.xml
Ros2_Omni_Robot/config/controller_configs/: controller_config_4w.yaml
Ros2_Omni_Robot/launch/: gazebo_sim.launch.py
Ros2_Omni_Robot/rviz/: slam.rviz  test.rviz
Ros2_Omni_Robot/src/: kinematics.cpp  test_publisher.cpp
Ros2_Omni_Robot/urdf/3w/: gazebo_plugins.urdf.xacro  main.urdf.xacro  ros2_control.urdf.xacro
Ros2_Omni_Robot/urdf/3w/IMU/: IMU.gazebo.xacro  IMU.urdf.xacro
Ros2_Omni_Robot/urdf/3w/base/: base.urdf.xacro
Ros2_Omni_Robot/urdf/3w/base_layer/: base_layer.urdf.xacro
Ros2_Omni_Robot/urdf/3w/camera/: camera.gazebo.xacro  camera.urdf.xacro
Ros2_Omni_Robot/urdf/3w/camera_bracket/: camera_bracket.urdf.xacro
Ros2_Omni_Robot/urdf/3w/laser/: laser.gazebo.xacro  laser.urdf.xacro
Ros2_Omni_Robot/urdf/3w/omni_wheel/: omni_wheel.gazebo.xacro  omni_wheel.urdf.xacro
Ros2_Omni_Robot/urdf/3w/roller/: roller.gazebo.xacro  roller.urdf.xacro
Ros2_Omni_Robot/urdf/3w_v2/: gazebo_plugins.urdf.xacro  ros2_control.urdf.xacro
Ros2_Omni_Robot/urdf/4w/: base_link.urdf.xacro  camera.urdf.xacro  gazebo_plugins.urdf.xacro  lidar.urdf.xacro  main.urdf.xacro  omni_wheel.urdf.xacro  ros2_control.urdf.xacro
Ros2_Omni_Robot/urdf/5w/: base_link.urdf.xacro  camera.urdf.xacro  gazebo_plugins.urdf.xacro  lidar.urdf.xacro  main.urdf.xacro  omni_wheel.urdf.xacro  roller.urdf.xacro  ros2_control.urdf.xacro
Ros2_Omni_Robot/urdf/6w/: base_link.urdf.xacro  camera.urdf.xacro  gazebo_plugins.urdf.xacro  lidar.urdf.xacro  main.urdf.xacro  omni_wheel.urdf.xacro  roller.urdf.xacro  ros2_control.urdf.xacro
